--- a/lab7-pogoda/index.html
+++ b/lab7-pogoda/index.html
@@ -6,6 +6,12 @@
 		<meta name="viewport" content="width=q, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="./style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+			integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
 		<main>
